# nanoscientist

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  example.py  main.py  msr_scientist.py  pyproject.toml  requirements.txt  research.py  run.py  test_basic.py
config/: config.yaml
data/skill_seeds/: skills.json
data/skill_seeds/citation-management/: SKILL.md
data/skill_seeds/docx/: SKILL.md  (+1 more)
docs/: PAPER_QUALITY_STANDARD.md  example-bug.html  example-paper.html  example-ui.html  example-video.html  index.html
docs/plans/: 2026-02-02-pocketflow-research-pipeline-design.md
msr_scientist/: latex_writer.py
skills/: README.md  skills.json
skills/data-visualization/: SKILL.md
skills/github-mining/: SKILL.md
skills/gpt-image-2/: SKILL.md
skills/latex-posters/: SKILL.md
skills/paper-2-web/: SKILL.md
skills/paper-planning/: SKILL.md
skills/paper-writing/: SKILL.md
skills/peer-review/: SKILL.md
skills/pptx-posters/: SKILL.md
skills/research-grants/: SKILL.md
skills/research-lookup/: README.md
skills/scientific-schematics/: README.md  SKILL.md
skills/scientific-writing/: SKILL.md
skills/study-workflow/: SKILL.md
skills/tooluniverse/: SKILL.md
src/: __init__.py  cli.py  config.py  flow.py  main.py  nodes.py  report_write.py  utils.py
src/skill_orchestrator/: __init__.py  client.py  graph.py  models.py  null_visualizer.py  orchestrator.py  prompts.py  run_context.py  skills.py  throttler.py  web_ui.py
src/skill_retriever/: __init__.py  __main__.py
utils/: __init__.py  docker_runner.py  latex_tools.py  llm.py  skill_loader.py
(+40 files in other folders)
