[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AgentSkillOS"
version = "0.1.0"
description = "Skill orchestrator using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "User" }
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    # skill_retriever dependencies
    "chromadb>=0.4.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
skill = "src.cli:main"
research = "research:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
science = [
    # Scientific skills runtime dependencies
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "arxiv>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "bibtexparser>=2.0.0b9",
    "gitpython>=3.1.0",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
